post blog post entry
Updates based on blog post entry and fixed axial coordinate axis

--- a/hexstyle.css
+++ b/hexstyle.css
@@ -1,5 +1,12 @@
-#hexbreakout{
+body {
+    background-color: #1e1e1e;
+    color: #ffffff;
+}
+
+#controls {
+    background-color: #171717;
+}
+
+#hexbreakout {
     border: 1px solid black;
-    margin: 0 auto;
-    display:block;
 }
